--- a/.github/workflows/data_pipeline.yml
+++ b/.github/workflows/data_pipeline.yml
@@ -19,7 +19,7 @@ jobs:
           python-version: '3.10'
 
       - name: Install Dependencies
-        run: pip install requests psycopg2
+        run: pip install requests psycopg2 python-dotenv
 
       - name: Run Data Fetch Script
         env:
