--- a/.github/workflows/generate_html.yml
+++ b/.github/workflows/generate_html.yml
@@ -17,7 +17,7 @@ jobs:
           python-version: '3.10'
 
       - name: Install Dependencies
-        run: pip install requests psycopg2 python-dotenv pandas
+        run: pip install requests psycopg2 python-dotenv pandas sqlalchemy
 
       - name: Run Generate HTML Script
         env:
