--- a/.github/workflows/generate_html.yml
+++ b/.github/workflows/generate_html.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Install Dependencies
         run: pip install requests psycopg2 python-dotenv pandas sqlalchemy
 
+      - name: Check Working Directory
+        run: pwd && ls -lh docs
+    
       - name: Run Generate HTML Script
         env:
           SUPABASE_DB_URL: ${{ secrets.SUPABASE_DB_URL }}
