--- a/.github/workflows/generate_html.yml
+++ b/.github/workflows/generate_html.yml
@@ -26,3 +26,11 @@ jobs:
         env:
           SUPABASE_DB_URL: ${{ secrets.SUPABASE_DB_URL }}
         run: python scripts/generate_html.py
+
+      - name: Commit and Push index.html
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add docs/index.html
+          git commit -m "Auto-update index.html" || echo "No changes to commit"
+          git push
