--- a/.github/workflows/generate_html.yml
+++ b/.github/workflows/generate_html.yml
@@ -27,13 +27,14 @@ jobs:
           SUPABASE_DB_URL: ${{ secrets.SUPABASE_DB_URL }}
         run: python scripts/generate_html.py
 
-      - name: Commit and Push index.html
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+      - name: Push updated index.html
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
+          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/strawbo/lake-sammamish.git
           git add docs/index.html
           git commit -m "Auto-update index.html" || echo "No changes to commit"
-          git push https://x-access-token:${GITHUB_TOKEN}@github.com/strawbo/lake-sammamish.git main
+          git push origin main
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
 
